--- a/src/templates/public/cadastro_pessoa.html
+++ b/src/templates/public/cadastro_pessoa.html
@@ -3,12 +3,12 @@
 {% block content %}
     <form action="" method="POST" id="form_pessoa">
         <label for="nome">Nome</label>
-        <input type="text" class="form-control" id="nome">
+        <input type="text" class="form-control" name="name" id="nome">
         </div>
 
         <div class="form-group">
         <label for="idade">Idade</label>
-        <input type="number" class="form-control" id="idade">
+        <input type="number" class="form-control" name="age" id="idade" min="0">
         </div>
 
         <button type="submit" class="btn btn-primary">Cadastrar</button>
