adicionado a pagina de cadastro de transacao, alem da rota e controller

--- a/src/templates/partials/nav.html
+++ b/src/templates/partials/nav.html
@@ -10,7 +10,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="/cadastro/pessoa">Pessoa</a>
-                <a class="dropdown-item" href="#">Transação</a>
+                <a class="dropdown-item" href="/cadastro/transacao">Transação</a>
             </div>
         </li>
     </ul>
