--- a/src/templates/public/cadastro_transacao.html
+++ b/src/templates/public/cadastro_transacao.html
@@ -3,16 +3,16 @@
 {% block content %}
     <form action="" method="POST" id="form_pessoa">
         <label for="descricao">Descrição</label>
-        <input type="text" class="form-control" name="descricao" id="nome">
+        <input type="text" class="form-control" name="descricao" id="nome" required="true">
         </div>
 
         <div class="form-group">
             <label for="value">Valor</label>
-            <input type="number" class="form-control" name="value" id="nome" min="0" step="0.01">
+            <input type="number" class="form-control" name="value" id="nome" min="0" step="0.01" required="true">
         </div>
 
         <div class="form-group">
-            <select name="id_pessoa" id="nome">
+            <select name="id_pessoa" id="nome" required="true">
                 <option value="">---- Selecione a pessoa ----</option>
                 {% for pessoa in pessoas %}
                     <option value="{{pessoa.0}}">{{pessoa.1}}</option>
@@ -21,7 +21,7 @@
         </div>
 
         <div class="form-group">
-            <select name="id_type" id="nome">
+            <select name="id_type" id="nome" required="true">
                 <option value="">---- Selecione o tipo ----</option>
                 {% for tipo in tipos %}
                     <option value="{{tipo.0}}">{{tipo.1}}</option>
