Implementado o saldo total

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -37,3 +37,13 @@ table td{
     color: red;
     font-weight: 700;
 }
+
+#saldo{
+    color: blue;
+    font-weight: 700;
+}
+
+.total{
+    font-weight: 700;
+    color: black;
+}
