--- a/src/templates/public/listagem_saldo.html
+++ b/src/templates/public/listagem_saldo.html
@@ -16,6 +16,10 @@
                     <td id="receita">R$ {{pessoa.1}}</td>
                 </tr>
             {% endfor %}
+            <tr>
+                <td></td>
+                <td class="total">R$ {{ receita_total.0 }}</td>
+            </tr>
         </tbody>
     </table>
 
@@ -33,6 +37,31 @@
                     <td id="despesa">R$ {{pessoa.1}}</td>
                 </tr>
             {% endfor %}
+            <tr>
+                <td></td>
+                <td class="total">R$ {{ despesa_total.0 }}</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Nome</th>
+                <th scope="col">Saldo</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for pessoa in all_pessoas %}
+                <tr>
+                    <td>{{pessoa.1}}</td>
+                    <td id="saldo">R$ {{saldo[pessoa[0]-1]}}</td>
+                </tr>
+            {% endfor %}
+            <tr>
+                <td></td>
+                <td class="total">R$ {{ saldo_total }}</td>
+            </tr>
         </tbody>
     </table>
 {% endblock %}
