--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -38,5 +38,21 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script>
+        var select = document.getElementById('select_pessoa')
+        var trns_tipo = document.getElementById('tipo')
+        var botao = document.getElementById('botao_blck')
+
+        trns_tipo.addEventListener('change', function(){
+            const array = select.value.split("  ");
+            if(parseInt(array[1]) < 18 && trns_tipo.value == '1'){
+                botao.disabled = true
+                window.alert("Atenção! Menor de idade poderá cadastrar apenas despesas!")
+            }
+            else
+                botao.disabled = false
+        })
+    </script>
 </body>
 </html>
