--- a/src/templates/partials/msg.html
+++ b/src/templates/partials/msg.html
@@ -17,7 +17,7 @@
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
         {% for message in error %}
         {{message}}
-        <i class="fas fa-solid fa-triangle-exclamation"></i>
+        <i class="fa-solid fa-triangle-exclamation"></i>
         {% endfor %}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
