--- a/src/templates/public/listagem_saldo.html
+++ b/src/templates/public/listagem_saldo.html
@@ -18,7 +18,14 @@
             {% endfor %}
             <tr>
                 <td></td>
-                <td class="total">R$ {{ receita_total.0 }}</td>
+                <td class="total">R$
+                    R$
+                    {% if receita_total.0 == None %}
+                        0
+                    {% else %}
+                        {{ receita_total.0 }}
+                    {% endif %}
+                </td>
             </tr>
         </tbody>
     </table>
@@ -39,7 +46,14 @@
             {% endfor %}
             <tr>
                 <td></td>
-                <td class="total">R$ {{ despesa_total.0 }}</td>
+                <td class="total">
+                    R$
+                    {% if despesa_total.0 == None %}
+                        0
+                    {% else %}
+                        {{ despesa_total.0 }}
+                    {% endif %}
+                </td>
             </tr>
         </tbody>
     </table>
