correção na listagem das transações e do saldo

--- a/src/templates/public/listagem_saldo.html
+++ b/src/templates/public/listagem_saldo.html
@@ -18,7 +18,7 @@
             {% endfor %}
             <tr>
                 <td></td>
-                <td class="total">R$
+                <td class="total">
                     R$
                     {% if receita_total.0 == None %}
                         0
